# object-pdf

./: .gitignore  pyproject.toml
app/: settings.py  urls.py
pdf/: urls.py  views.py
pdf/templates/pdf/: pdf.html
